# cv-assessment-multi-agent

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
examples/: AI_enginner.txt  Senior_Backend_Engineer.txt  Senior_Data_Scientist.txt  research_scientist_job.txt  sample_cv.txt  sample_cv_data_scientist.txt
src/cv_assessment/: __init__.py
src/cv_assessment/agents/: __init__.py  base_agent.py  culture_fit_agent.py  cv_parser_agent.py  experience_evaluator_agent.py  final_scorer_agent.py  job_analyzer_agent.py  skills_matcher_agent.py
src/cv_assessment/models/: __init__.py  schemas.py
src/cv_assessment/utils/: __init__.py  document_parser.py  llm_factory.py
src/cv_assessment/workflows/: __init__.py  assessment_workflow.py
tests/: __init__.py  run_example.py  test_agents.ipynb
tests/reports/: example_result.json
